--- a/src/app/wallet/wallet-inner/wallet-inner.component.html
+++ b/src/app/wallet/wallet-inner/wallet-inner.component.html
@@ -48,7 +48,7 @@
 						[value]="transferForm.controls['gasPrice'].value" [step]="(settings?.max - settings?.min) / 2" min="{{settings?.min}}" max="{{settings?.max}}">
 					</mat-slider>
 					<div class="indicator">
-						<span>Very slow</span>
+						<span>Safe low</span>
 						<span>Average</span>
 						<span>Fast</span>
 					</div>
