--- a/src/app/wallet/wallet-inner/wallet-inner.component.html
+++ b/src/app/wallet/wallet-inner/wallet-inner.component.html
@@ -3,6 +3,9 @@
 		<p class="balance">{{(token == 'eveg'? evegBalance : eveoBalance) | numberPipe}}<small> {{token == 'eveg'?  'EVEG' : 'EVEO'}}</small></p>
 
 </div>
+
+<div class="hline first"></div>
+
 <div class="receive-section">
 	<div>
 		<h2>{{'wallet.receive' | translate}} {{token == 'eveg'?  'EVEG' : 'EVEO'}}</h2>
@@ -29,7 +32,7 @@
 			<label>{{'wallet.rec_address' | translate}}</label>
 			<input class="transfer-input" type="text" placeholder="{{'wallet.enter_address' | translate}}" formControlName="address">
 			<p class="error-message"
-			   *ngIf="transferForm?.controls['address']?.errors && transferForm?.controls['address']?.errors.invalidAddress">
+			   *ngIf="addressError && tSubmitted">
 				{{'error.invalid_address' | translate}}</p>
 		</div>
 
@@ -37,7 +40,7 @@
 		<div class="form-fields">
 			<div class="coin-field">
 				<input type="text" (keypress)="ifNumber($event)" placeholder="{{token == 'eveg'?  'EVEG' : 'EVEO'}}" formControlName="amount">
-				<p class="error-message" *ngIf="amountErrorMessage && transferForm?.controls['amount']?.value != 0" fxLayout="row" [innerHTML]="amountErrorMessage"></p>
+				<p class="error-message" *ngIf="amountErrorMessage" fxLayout="row" [innerHTML]="amountErrorMessage"></p>
 			</div>
 			<div class="transaction-fee">
 				<div>
@@ -62,12 +65,12 @@
 						Time: {{transferForm?.controls['gasPrice']?.value === settings?.min ? time?.min : transferForm?.controls['gasPrice']?.value === settings?.max ?   time?.max:  time?.average}} sec.
 					
 					</p>
-					<p class="error-message" *ngIf="transferForm?.controls['gasPrice']?.errors && transferForm?.controls['gasPrice']?.errors.invalidGasPrice">{{'error.invalid_gas' | translate}}</p>
+					<p class="error-message" *ngIf="gasPriceError && tSubmitted">{{'error.invalid_gas' | translate}}</p>
 				</div>
 			</div>
 		</div>
 		<div>
-			<button class="button button--primary button--upper" [disabled]="transferForm?.invalid"
+			<button class="button button--primary button--upper"
 				(click)="generateTransaction()">{{'wallet.generate' | translate}}</button>
 		</div>
 	</div>
