--- a/src/styles.scss
+++ b/src/styles.scss
@@ -250,3 +250,10 @@ textarea {
 		}
 	}
 }
+.mat-snack-bar-handset {
+    width: 100%;
+    position: fixed!important;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
