--- a/src/app/wallet/wallet/wallet.component.html
+++ b/src/app/wallet/wallet/wallet.component.html
@@ -5,7 +5,7 @@
 
 			<div class="menu">
 				<div class="wallet-menu">
-					<img src="assets/images/wallet.svg" alt="">
+					<img style="width: 32px; height: 32px" src="assets/images/wallet.svg" alt="">
 					<span class="notranslate">{{ethBalance | numberPipe}} ETH</span>
 				</div>
 				<div class="menu-items menu-items--open" >
