--- a/src/app/wallet/wallet-inner/wallet-inner.component.html
+++ b/src/app/wallet/wallet-inner/wallet-inner.component.html
@@ -1,6 +1,6 @@
 <div style="display: flex;align-items: center;justify-content: flex-start;padding:10px 0 30px;">
-		<h2>{{'wallet.ba_lance' | translate}}: </h2>
-		<h3>{{(token == 'eveg'? evegBalance : eveoBalance) | numberPipe}}<small> {{token == 'eveg'?  'EVEG' : 'EVEO'}}</small></h3>
+		<h3>{{'wallet.ba_lance' | translate}}: </h3><span> </span>
+	<p class="balance">{{(token == 'eveg'? evegBalance : eveoBalance) | numberPipe}}<small> {{token == 'eveg'?  'EVEG' : 'EVEO'}}</small></p>
 
 </div>
 
