--- a/src/app/core/confirm-transaction/confirm-transaction.component.html
+++ b/src/app/core/confirm-transaction/confirm-transaction.component.html
@@ -25,8 +25,8 @@
 			<td class="address">{{transferParams.address}}</td>
 		</tr>
 		<tr>
-			<td>{{'wallet.gas_price' | translate}}</td>
-			<td class="fee">{{transferParams.gasPrice}} Gwei</td>
+			<td>{{'wallet.est_fee' | translate}}</td>
+			<td class="fee">{{transferParams.estFee}} ETH</td>
 		</tr>
 	</table>
 	
