fix number pipe

--- a/src/app/wallet/wallet-inner/wallet-inner.component.html
+++ b/src/app/wallet/wallet-inner/wallet-inner.component.html
@@ -120,8 +120,12 @@
 					{{'wallet.received' | translate}}</h3>
 				<h3 class="transaction__type transaction__type--sent" *ngIf="action.blockHash && action.fromAddress == this.address">
 					{{'wallet.sent' | translate}}</h3>
-
+				<div class="transaction-data__date" *ngIf="mobile" style="float: right;     width: initial;">
+					<b>{{getHours(action.timestamp*1000)}}</b>
+					<span>{{getDate(action.timestamp*1000)}}</span>
+				</div>
 				<h3 class="transaction__amount">{{action.amount | numberPipe}} EVEO</h3>
+			
 			</div>
 			<div class="transaction-data">
 				<div class="transaction-data__peer">
@@ -130,7 +134,7 @@
 					<span *ngIf="action.fromAddress == this.address">{{action.toAddress}}</span>
 					<span *ngIf="action.toAddress == this.address">{{action.fromAddress}}</span>
 				</div>
-				<div class="transaction-data__date">
+				<div class="transaction-data__date" *ngIf="!mobile">
 					<b>{{getHours(action.timestamp*1000)}}</b>
 					<span>{{getDate(action.timestamp*1000)}}</span>
 				</div>
