--- a/src/app/wallet/wallet-inner/wallet-inner.component.html
+++ b/src/app/wallet/wallet-inner/wallet-inner.component.html
@@ -1,6 +1,6 @@
 <div style="display: flex;align-items: center;justify-content: flex-start;padding:10px 0 30px;">
 		<h3>{{'wallet.ba_lance' | translate}}: </h3><span> </span>
-	<p class="balance">{{(token == 'eveg'? evegBalance : eveoBalance) | numberPipe}}<small> {{token == 'eveg'?  'EVEG' : 'EVEO'}}</small></p>
+	<p class="balance" >{{(token == 'eveg'? evegBalance : eveoBalance) | numberPipe}}<small> {{token == 'eveg'?  'EVEG' : 'EVEO'}}</small></p>
 
 </div>
 
@@ -38,8 +38,9 @@
 
 		<label>{{token == 'eveg'?  'EVEG' : 'EVEO'}} Amount</label>
 		<div class="form-fields">
-			<div class="coin-field">
+			<div class="coin-field" style="position: relative">
 				<input type="text" (keypress)="ifNumber($event)" placeholder="{{token == 'eveg'?  'EVEG' : 'EVEO'}}" formControlName="amount">
+				<span class="max" (click)="fillMax()">MAX</span>
 				<p class="error-message" *ngIf="amountErrorMessage" fxLayout="row" [innerHTML]="amountErrorMessage"></p>
 			</div>
 			<div class="transaction-fee">
